Fix layout problem in mobile.

--- a/src/styles/partials/reset.css
+++ b/src/styles/partials/reset.css
@@ -1,3 +1,7 @@
 /* stylelint-disable */
 @import-normalize;
 /* stylelint-enable */
+
+body {
+  margin: 0;
+}
